--- a/index.html
+++ b/index.html
@@ -9,6 +9,56 @@
     </head>
 
     <body>
-
+        <div class="header">
+            <div class="header-logo">
+                <a>Header Logo</a>
+            </div>
+            <div class="header-link">
+                <ul>
+                    <li><a>header link one</a></li>
+                    <li><a>header link two</a></li>
+                    <li><a>header link three</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="content">
+            <div class="home-container">
+                <div class="home-textbox">
+                    <h1 class="home-title">This website is awesome</h1>
+                    <p class="home-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button class="home-signup">Sign up</button>
+                </div>
+                <div class="img-placeholder">
+                    <p>this is a placeholder for an image</p>
+                </div>
+            </div>
+            <div class="info-container">
+                <h2 class="info-title">Some random information</h2>
+                <div class="card-container">
+                    <div class="card-box">
+                        <div class="card-img"></div>
+                        <div class="card-text">
+                            <p>this is some subtext under an ilustration or image</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="quote-container">
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p>-Thor, God of Thunder</p>
+            </div>
+            <div class="signup-container">
+                <div class="signup-banner">
+                    <div class="signup-text">
+                        <p>Call to action! It's time!</p>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <p>Copyright © The Odin Project 2021</p>
+        </div>
     </body>
 </html>
