--- a/index.html
+++ b/index.html
@@ -33,8 +33,26 @@
                 </div>
             </div>
             <div class="info-container">
-                <h2 class="info-title">Some random information</h2>
+                <h2 class="info-title">Some random information.</h2>
                 <div class="card-container">
+                    <div class="card-box">
+                        <div class="card-img"></div>
+                        <div class="card-text">
+                            <p>this is some subtext under an ilustration or image</p>
+                        </div>
+                    </div>
+                    <div class="card-box">
+                        <div class="card-img"></div>
+                        <div class="card-text">
+                            <p>this is some subtext under an ilustration or image</p>
+                        </div>
+                    </div>
+                    <div class="card-box">
+                        <div class="card-img"></div>
+                        <div class="card-text">
+                            <p>this is some subtext under an ilustration or image</p>
+                        </div>
+                    </div>
                     <div class="card-box">
                         <div class="card-img"></div>
                         <div class="card-text">
@@ -44,8 +62,8 @@
                 </div>
             </div>
             <div class="quote-container">
-                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-                <p>-Thor, God of Thunder</p>
+                <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="quote-author">-Thor, God of Thunder</p>
             </div>
             <div class="signup-container">
                 <div class="signup-banner">
